Test/errors/err_lambda_to_c_funcptr.cb
// A CFlat closure (lambda or `function<>` variable) is a 16-byte {code, env} fat pointer; a C
// function pointer is a bare code address with no env slot. Handing a closure across the C ABI
// would drop the captured state and crash at runtime, so the compiler must reject it. The
// supported form is passing a non-capturing named function directly.

expect_error("cannot pass a lambda or 'function<>' variable to C function-pointer parameter") {
    extern void qsort(void* base, u64 num, u64 size, function<int(void*, void*)> cmp);

    int sortFour()
    {
        int[4] a = {3, 1, 2, 0};
        int bias = 1;
        // Capturing lambda passed where C wants a bare function pointer - rejected.
        qsort(&a[0], 4u, 4u, (void* x, void* y) => {
            int* ix = (int*)x; int* iy = (int*)y;
            return (*ix - *iy) * bias;
        });
        return a[0];
    }
}
